--- a/trunk/cng1985/cng1985/cng1985.csproj
+++ b/trunk/cng1985/cng1985/cng1985.csproj
@@ -114,6 +114,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="SqlWork\Work.cs" />
     <Compile Include="WebWork.cs" />
   </ItemGroup>
   <ItemGroup>
