--- a/trunk/cng1985/School/School.csproj
+++ b/trunk/cng1985/School/School.csproj
@@ -459,6 +459,7 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Design\Designone.Master" />
     <None Include="LinqModle\DataClasses1.dbml.layout">
       <DependentUpon>DataClasses1.dbml</DependentUpon>
     </None>
