--- a/trunk/cng1985/School/Web.config
+++ b/trunk/cng1985/School/Web.config
@@ -23,10 +23,15 @@
 	</configSections>
 	<appSettings/>
 	<connectionStrings>
-		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-		<add name="WorkEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Work.mdf;Integrated Security=True;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
-		<add name="WorkConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Work.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+  <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
+   providerName="System.Data.SqlClient" />
+  <add name="WorkEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Work.mdf;Integrated Security=True;User Instance=True;MultipleActiveResultSets=True&quot;"
+   providerName="System.Data.EntityClient" />
+  <add name="WorkConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Work.mdf;Integrated Security=True;User Instance=True"
+   providerName="System.Data.SqlClient" />
+  <add name="webworkConnectionString" connectionString="Data Source=.;Initial Catalog=webwork;User ID=sa;Password=123456789123"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	<system.web>
 		<!-- 
             Set compilation debug="true" to insert debugging 
