--- a/trunk/cng1985/School/School.csproj
+++ b/trunk/cng1985/School/School.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.WebForms, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Windows\assembly\GAC_MSIL\Microsoft.ReportViewer.WebForms\9.0.0.0__b03f5f7f11d50a3a\Microsoft.ReportViewer.WebForms.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core">
@@ -139,12 +143,24 @@
     <Compile Include="tool\WebForm1.aspx.designer.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
+    <Compile Include="tool\WebForm2.aspx.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="tool\WebForm2.aspx.designer.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
+    </Compile>
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="WebForm1.aspx.designer.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webworkDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>webworkDataSet.xsd</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -478,6 +494,7 @@
     <Content Include="HtmlDesign\HTMLPage1.htm" />
     <Content Include="HtmlDesign\image\3.png" />
     <Content Include="tool\WebForm1.aspx" />
+    <Content Include="tool\WebForm2.aspx" />
     <Content Include="Views\FriendInfo\Index.aspx" />
     <Content Include="Views\MessageInfo\Index.aspx" />
     <Content Include="Views\Message\Create.aspx" />
@@ -490,6 +507,7 @@
     <Content Include="Views\SchoolHome\Index.aspx" />
     <Content Include="Views\StudyInfo\Index.aspx" />
     <Content Include="Views\TodayInfo\Index.aspx" />
+    <Content Include="webxml\XMLFile1.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LinqModle\DataClasses1.dbml">
@@ -502,6 +520,20 @@
     <None Include="LinqModle\DataClasses1.dbml.layout">
       <DependentUpon>DataClasses1.dbml</DependentUpon>
     </None>
+    <None Include="webworkDataSet.xsc">
+      <DependentUpon>webworkDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="webworkDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>webworkDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="webworkDataSet.xss">
+      <DependentUpon>webworkDataSet.xsd</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Report1.rdlc" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
